# Cacti

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp
include/: _sources.txt
include/cacti/: application.hpp  config.hpp.in  error.hpp  font_database.hpp  imconfig_cacti.hpp  math.hpp  result.hpp  stdlib.hpp
scripts/: GatherSources.cmake  GitVersionInfo.cmake
src/: _sources.txt  application.cpp  application_internal.hpp  font_database.cpp  metal_cpp_impl.cpp  metal_interop.h  metal_interop.mm
